@@ -2,6 +2,9 @@ What's New in Python 2.2.3 ?
 Release date: XX-XXX-2003
 ============================
 
+- It is no longer possible to use object.__setattr__ to circumvent the
+  restrictions on setting attributes of type objects.
+
 - Implemented os.fsync() for Windows, where it calls the MS _commit()
   function.  Before, there was no way in core Python to ensure file
   writes actually showed up on disk when necessary.
